keyvault-csi/traefik-csi-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-tls-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-tls-example
  template:
    metadata:
      labels:
        app: traefik-tls-example
        aadpodidbinding: bjdtraefik-identity
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - name: tls-mount
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
      - name: tls-mount
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "traefik-tls-example"
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-tls-service
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: traefik-tls-example
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-tls-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: csi-example.bjd.tech  
    http:
      paths:
      - backend:
          service:
            name: traefik-tls-service
            port: 
                number: 80
        path: /
        pathType: Prefix 
  tls:
  - secretName: traefik-ingress-tls
